# meow

./: .env.example  .gitignore  .prettierrc  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  compile_linux_x86_64.bat  compile_linux_x86_64.sh  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
.cargo/: config.toml
build-tools/: compileSrc.mjs
src/: command_list.rs  index.ts  main.rs
src/commands/: avatar.rs  banner.rs  guild.rs  help.rs  mod.rs  profile.rs
src/commands/fun/: action.ts  interact.rs
src/commands/general/: avatar.rs  banner.rs  guild.rs  help.rs  help.ts  ping.rs  ping.ts  userAvatar.ts
src/commands/misc/: calcexp.rs  meow.ts
src/core/: constants.rs  mod.rs
src/core/nyan/: api.rs  database.rs  embed.rs  user.rs
src/core/sql/: schema.sql
src/core/utils/: error_handler.rs  event_handler.rs  logging.rs  ranime.rs  system_info.rs
src/events/: ready.rs
src/listeners/: errorHandler.ts  guildJoin.ts  interactionCreate.ts  messageCreate.ts  ready.ts
src/utils/: constants.ts  loadEverythingForMePleaseOnegaishimasu.ts  logging.ts  types.ts
src/utils/nyan/: client.ts  command.ts  embed.ts  helpers.ts
src/utils/shouko/: client.ts  command.ts  embed.ts
