[package]
name = "meowbot"
version = "0.1.7"
edition = "2021"
repository = "https://github.com/Specifix5/meow"

[dependencies]
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "next"}
dotenv = {version ="^0.15.0"}
tokio = {version = "^1.43.0", features = ["macros", "rt-multi-thread", "signal"] }
rand = {version = "^0.8.5"}
chrono = { version = "^0.4.39" }
strum = { version = "0.27.0", features = ["derive"] }
serde = { version = "^1.0.217", features = ["derive"] }
lazy_static = { version = "^1.4.0" }
sysinfo = { version = "^0.33.1" }
sqlx = { version = "^0.8.3", features = ["runtime-tokio-rustls", "sqlite"] }
reqwest = {version = "^0.12.12", default-features = false, features = ["json", "cookies", "rustls-tls"]}
