[package]
name = "meowbot"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/Specifix5/meow"

[dependencies]
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "next"}
dotenv = {version ="^0.15.0"}
tokio = {version = "^1.45.0", features = ["macros", "rt-multi-thread", "signal"] }
rand = {version = "^0.8.5"}
chrono = { version = "^0.4.41" }
strum = { version = "0.27.1", features = ["derive"] }
serde = { version = "^1.0.219", features = ["derive"] }
lazy_static = { version = "^1.4.0" }
sysinfo = { version = "^0.35.0" }
sqlx = { version = "^0.8.5", features = ["runtime-tokio-rustls", "sqlite"] }
reqwest = {version = "^0.12.15", default-features = false, features = ["json", "cookies", "rustls-tls"]}
murmur3 = { version = "^0.5.2"}
